mixing material syle bootstrap

--- a/views/bootstrap.jade
+++ b/views/bootstrap.jade
@@ -49,10 +49,15 @@ html(lang="en")
 		title= title
 		block styles
 			link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
+			link(rel='stylesheet', href='/css/roboto.min.css')
+			link(rel='stylesheet', href='/css/material.min.css')
+			link(rel='stylesheet', href='/css/ripples.min.css')
 	body
 		block body
 			
 		block scripts
 			script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
 			script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
-
+			script(src='/js/ripples.min.js')
+			script(src='/js/material.min.js')
+			script(src='/js/script.js')
